log
Thu 28 Mar 2024 09:10:15 PM UTC: 
 tests:  0|6
total_score: 0/70
94dac12
Fri 29 Mar 2024 05:27:52 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
0d8073d
Fri 29 Mar 2024 06:15:46 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
0c1e115
Fri 29 Mar 2024 06:20:09 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|0
   [ INFO ] llamando a firstList
cc4b470
Fri 29 Mar 2024 06:20:30 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d2eca2f
Fri 29 Mar 2024 06:23:01 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:49:10: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   49 |   return current -> next -> dato;
      |          ^~~~~~~
      |          popCurrent
list.c:49:10: note: each undeclared identifier is reported only once for each function it appears in
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
cb156b0
